violating_resources/anthos-service-mesh/workload-policy/sidecar-injection/samples/example_allowed_annotation_inject_true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  containers:
  - name: sleep
    image: curlimages/curl
  - name: istio-proxy
    image: gcr.io/gke-release/asm/proxyv2:release
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
