violating_resources/anthos-service-mesh/workload-policy/sidecar-injection/samples/example_allowed_annotation_no_inject.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example_allowed_annotation_no_inject
  annotations:
    "false": "false"
spec:
  containers:
  - name: sleep
    image: curlimages/curl
  - name: istio-proxy
    image: gcr.io/gke-release/asm/proxyv2:release
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
