violating_resources/anthos-service-mesh/workload-policy/sidecar-injection/samples/example_disallowed_annotation_inject_false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: sleep
    image: curlimages/curl
