violating_resources/anthos-service-mesh/workload-policy/sidecar-injection/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: asm-sidecar-injection
tests:
  - name: asm-sidecar-injection
    template: template.yaml
    constraint: samples/constraint.yaml
    cases:
      - name: bad-annotation-inject-false
        object: samples/example_disallowed_annotation_inject_false.yaml
        assertions:
          - violations: yes
      - name: valid-annotation-inject-true
        object: samples/example_allowed_annotation_inject_true.yaml
        assertions:
          - violations: no
      - name: valid-annotation-no-inject
        object: samples/example_allowed_annotation_no_inject.yaml
        assertions:
          - violations: no
